/* hostdiscovery.proto: describes the hostdiscovery object
 *
 * Author: Ghazanfar Ali <ghazanfar.ali@ttu.edu>,Kevin Pelzel <kevinpelzel22@gmail.com>; J. Lowell Wofford <lowell@lanl.gov>
 *
 * This software is open source software available under the BSD-3 license.
 * Copyright (c) 2018, Triad National Security, LLC
 * See LICENSE file for details.
 */

syntax = "proto3";
package proto;

message HostDiscoveryConfig {
    string polling_interval = 1;
    string temp_sensor_path = 2;
    string freq_sensor_url = 3;
    map<string, HostThermalThresholds> thermal_thresholds = 4;
    bool log_thermal_data = 5;
    string log_here = 6;
}

message HostThermalThresholds {
    int32 lower_normal = 1;
    int32 upper_normal = 2;

    int32 lower_high = 3;
    int32 upper_high = 4;

    int32 lower_critical = 5;
    int32 upper_critical = 6;

}